--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@ node_modules/
 *.log
 *.sql
 *.sqlite
-
+*.jpg
+*.png
 .sass-cache/
 *.css.map
 *.sass.map
 *.scss.map
 *.sublime-project
 *.sublime-workspace
+browser_sync.bat
